Migrate from org.json to gson